--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1849,15 +1849,15 @@ flex-grow : 1;
     position: fixed;
     width: 100%;
     background-color: @background;
-    -webkit-transition: max-height 0.8s;
-    -moz-transition: max-height 0.8s;
-    transition: max-height 0.8s;
-    z-index: 0;
+    -webkit-transition: max-height 0.8s ease-out;
+    -moz-transition: max-height 0.8s ease-out;
+    transition: max-height 0.8s ease-out;
+    z-index: 1;
 }
 
 .info_container:hover {
     max-height: 400px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .patient_info_text {
